// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccordionItem /> renders bordered 1`] = `
<div
  className="item_14cfb9u-o_O-item_bordered_hg23ez"
>
  <button
    aria-controls="accordion-body-.0"
    aria-selected={false}
    className="title_1sndfdc"
    id="accordion-title-.0"
    onClick={[Function]}
    role="tab"
    tabIndex={0}
    type="button"
  >
    <span
      className="titleText_irsnq7"
    >
      Title
    </span>
    <ExpandableIcon
      expanded={false}
      size={24}
    />
  </button>
  <section
    aria-hidden={true}
    aria-labelledby="accordion-title-.0"
    className="body_1votmn2"
    id="accordion-body-.0"
    role="tabpanel"
  />
</div>
`;

exports[`<AccordionItem /> renders expanded 1`] = `
<div
  className="item_14cfb9u"
>
  <button
    aria-controls="accordion-body-.0"
    aria-selected={true}
    className="title_1sndfdc"
    id="accordion-title-.0"
    onClick={[Function]}
    role="tab"
    tabIndex={0}
    type="button"
  >
    <span
      className="titleText_irsnq7"
    >
      Title
    </span>
    <ExpandableIcon
      expanded={true}
      size={24}
    />
  </button>
  <section
    aria-hidden={false}
    aria-labelledby="accordion-title-.0"
    className="body_1votmn2-o_O-body_expanded_uhlm2"
    id="accordion-body-.0"
    role="tabpanel"
  />
</div>
`;
